Part4_Kubernetes/Chapter03/Ch03_03-ingress-alb/k8s-manifests/test-ingress.yaml
# 새로운 버전에 맞게 수정함.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2048
  namespace: test-ingress-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-034361e5f0e214d62, subnet-0638948bfb6f5c841
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-2048
                port:
                  number: 80
